[gd_scene load_steps=4 format=3 uid="uid://dl6k1fmnn1mnh"]

[ext_resource type="Script" path="res://Game.gd" id="1_tno48"]
[ext_resource type="PackedScene" uid="uid://cbyjjq47i081w" path="res://Levels/Level1.tscn" id="2_3t1np"]
[ext_resource type="Script" path="res://addons/jam_launch/core/JamConnect.gd" id="3_21l01"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tno48")

[node name="TitleZone" type="Node2D" parent="."]
position = Vector2(-2000, 0)

[node name="TitleCam" type="Camera2D" parent="TitleZone"]
position = Vector2(4, 0)

[node name="Level1" parent="." instance=ExtResource("2_3t1np")]
position = Vector2(-64, 27)

[node name="JamConnect" type="Node" parent="."]
script = ExtResource("3_21l01")

[connection signal="player_connected" from="JamConnect" to="." method="_on_jam_connect_player_connected"]
[connection signal="player_disconnected" from="JamConnect" to="." method="_on_jam_connect_player_disconnected"]
